# festapi_crud

./: .gitignore  README.md  main.py  pyproject.toml
api/: main.py
